retrofit day1, day4 solutions